2003-07-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/semaphore.c (UnlockSemaphoreInfo): Bugfix, modify
	the 'locked' flag while still under protection of the lock.
	This fix is necessary for thread-safety.

2003-06-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* INSTALL-unix.txt: Add additional information regarding LZW.

2003-06-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (ReadBMPImage): Only validate the file size value
	for compressed BMPs.

2003-06-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: Update to unreleased 1.0.3 so that development
	builds from CVS do not interfere with existing 1.0.2 release
	library.
	* configure.ac: Don't add -lfpx to LIBS while configuring
	because the C compiler may fail to link with it in later
	tests.

2003-06-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* GraphicsMagick 1.0.2 released.
	* magick/command.c (ConvertImageCommand): Eliminate warnings
	noticed with Sun compiler.	
	* acinclude.m4: Add '#undef inline' in front of C++ tests.
	* coders/x.c (RegisterXImage): Only register the X coder if HasX11
	is defined.
	* libxml/libxml2.def: Since VisualMagick configure is not fixed
	yet, add "LIBRARY CORE_RL_libxml_.dll" to the top of the file to
	at least cover the release build case.

2003-06-07  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* magick/image.c (GetImageGeometry) Y was a function of width
	instead of height when processing EastGravity or WestGravity
	(bug report from Cristy).

2003-06-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.c (ReadConfigureFile): Move event parsing to
	ParseEvents funtion.
	(SetLogEventMask): Move event parsing to
	ParseEvents funtion.
	* PerlMagick/t/subroutines.pl (testMontage): It seems that passing
	an empty set of options to the SetImage method corrupts the image
	options (surely a PerlMagick bug), so don't invoke SetImage unless
	there are options to set.