@@ -53,6 +53,13 @@
 </tr>
 </table>
 <p>
+2003-07-04  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> NEWS: Updated to include current changes since 1.0.2.
+
+</UL>
+<p>
 2003-07-03  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
