@@ -2,7 +2,7 @@
   "http://www.w3.org/TR/html4/loose.dtd">
 <HTML>
 <HEAD>
-<TITLE>GraphicsMagick 1.0.2 News</TITLE>
+<TITLE>GraphicsMagick 1.0.3 News</TITLE>
 	<STYLE>
 	<!--
 		@page { size: 8.5in 11in }
@@ -49,9 +49,22 @@
 <table BORDER=0 WIDTH="100%" >
 <tr>
 <td BGCOLOR="#52799E"><img SRC="../images/right_triangle.png" ALT=">" height=14 width=15>
-<b><font face="Helvetica, Arial"><font color="#FFFFFF"><font size="+1">GraphicsMagick 1.0.2 News</font></font></font></b></td>
+<b><font face="Helvetica, Arial"><font color="#FFFFFF"><font size="+1">GraphicsMagick 1.0.3 News</font></font></font></b></td>
 </tr>
 </table>
+<p>
+Major changes associated with GraphicsMagick 1.0.3 (Not released yet)
+
+<p>
+  Bug Fixes:<BR>
+<UL>
+  <LI> Configure script fix to ensure that -lfpx is not supplied to C
+    compiler during subsequent tests since this fails on some systems.
+  <LI> BMP reader fix to avoid unnecessary rejection of some old
+    uncompressed Windows 2.X and OS/2 BMPs.
+  <LI> Semaphore fix which is necessary for proper multi-threaded operation.
+
+</UL>
 <p>
 Major changes associated with GraphicsMagick 1.0.2 (Released June 6, 2003)
 
